test/valid/56311_minus_minus/minus_minus.agu
-- Author: tcomp56311, João Vedor   

let main(_) : Unit -> Unit =
    print(-(-4))